@@ -120,6 +120,7 @@
 		<script type="text/javascript" src="js/loc/rigard/krawitz.js"></script>
 		<script type="text/javascript" src="js/loc/rigard/castle.js"></script>
 		<script type="text/javascript" src="js/loc/rigard/clothstore.js"></script>
+		<script type="text/javascript" src="js/loc/rigard/sexstore.js"></script>
 		<script type="text/javascript" src="js/loc/rigard/inn.js"></script>
 		<script type="text/javascript" src="js/loc/rigard/magetower.js"></script>
 		
