@@ -9,6 +9,7 @@ Version 0.3l
 ------------
 * Counter attack status effect implemented (Set trap ability).
 * Implemented and activated Ranger job.
+* Added the odd shop to Rigard shopping street. You can buy some strapons there.
 
 --------------------------------------------
              PREVIOUS VERSIONS
